--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
   		background-attachment: scroll;
 		background-size: cover;
 		cursor: default;
+		overflow-x: hidden;
 	}
 	h1 {
 		font-family: "degular-display", sans-serif;
@@ -46,6 +47,7 @@
 		font-weight: 300;
 	}
 	h4 {
+		font-family: "neue-haas-grotesk-text",sans-serif;
 		margin: 10px 0 10px 0;
 		font-weight: 500;
 		font-size: 1em;
@@ -59,11 +61,11 @@
 		width: 10px;
 	}
 	::-webkit-scrollbar-track {
-		background: #08131C;
+		background: #0A0A0A;
 	}
 	::-webkit-scrollbar-thumb {
 		background: #F26697;
-		border: 1px solid #08131C;
+		border: 1px solid #0A0A0A;
 	}
 	::-webkit-scrollbar-thumb:hover {
 		background: #2346F3;
@@ -169,7 +171,7 @@
 			font-size: 6vw;
 		}
 		h4, h5 {
-			font-size: 5vw;
+			font-size: 4vw;
 		}
 		ul {
 			width: 50%;
@@ -193,7 +195,9 @@
 		width: 0px;
 		}
 		.topnav { 
-		background-color: #F3F3F3;
+			background-color: #F0B719;
+			border-radius: 5px;
+			z-index: 5;
 		}
 		.topnav a {display: none;}
   		.topnav a.icon {
@@ -278,7 +282,6 @@
 		<a href="https://www.instagram.com/zaramysh/"><img src="instagram.png" style="width:30px;display:inline-block;" alt="Instagram"></a>
 		<a href="https://www.tiktok.com/@zaramysh"><img src="tik-tok.png" style="width:30px;display:inline-block;" alt="TikTok"></a>
 		<p>© Zara Hapiz 2023</p>
-		<p style="font-size:0.7em;">Special thanks to Cikgu Hidayati and Cikgu Rosila, my Computer Science teachers, for helping this website come to life.</p>
 	</footer>
 	<!--END OF FOOTER STUFF-->
 	<!--JAVASCRIPT SCRIPTS-->
