--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 	
 		<div class="carouselbg">
 		<div class="carousel">
-		APA KHABAR? ! ٱلسَّلَامُ عَلَيْكُمْ 你好! HALLO! привет! WHAT'S UP? SALUT! Γειά σου! ALOHA! こんにちは! HALLÅ! 안녕하세요! XIN CHÀO! HEY! ¡HOLA! வணக்கம்! สวัสดี!
+		APA KHABAR? ! مرحبًا 你好! HALLO! привет! WHAT'S UP? SALUT! Γειά σου! ALOHA! こんにちは! HALLÅ! 안녕하세요! XIN CHÀO! HEY! ¡HOLA! வணக்கம்! สวัสดี! HALÓ!
 		</div>
 		</div>
 	
