--- a/store.html
+++ b/store.html
@@ -267,6 +267,7 @@
 		background-color: #F3F3F3;
 		padding: 7px 10px 10px;
 		margin: 10px 0px;
+		transition: background-color 0.2s;
 	}
 	.button:hover {
 		background-color: #F0B719;
@@ -313,6 +314,21 @@
 		
 
 		<h2>Posters</h2>
+	
+		<div class="gallery">
+		<img src="artwork/The College Dropout - Kanye West.png" width="300px" alt="The College Dropout - Kanye West">
+		<div class="container">The College Dropout - Kanye West<br>
+		<a style="text-decoration:none;color:#0A0A0A;" href="https://drive.google.com/file/d/13vdWRBAvCAAlQWvS8hdFAU6HVf-KMeTd/view?usp=sharing" target="_blank"><div class="button">download PNG</div></a></div></div>	
+	
+		<div class="gallery">
+		<img src="artwork/Graduation - Kanye West.png" width="300px" alt="Graduation - Kanye West">
+		<div class="container">Graduation - Kanye West<br>
+		<a style="text-decoration:none;color:#0A0A0A;" href="https://drive.google.com/file/d/1tLK88M5uYoEPN17izdVPXs3qz4E6Fths/view?usp=sharing" target="_blank"><div class="button">download PNG</div></a></div></div>	
+	
+		<div class="gallery">
+		<img src="artwork/For All The Dogs - Drake.png" width="300px" alt="For All The Dogs - Drake">
+		<div class="container">For All The Dogs - Drake<br>
+		<a style="text-decoration:none;color:#0A0A0A;" href="https://drive.google.com/file/d/1djOMAlRiQkGXRpWr5ArZdRz4VM5iNI3I/view?usp=sharing" target="_blank"><div class="button">download PNG</div></a></div></div>	
 	
 		<div class="gallery">
 		<img src="artwork/Violent Crimes - Kanye West.png" width="300px" alt="Violent Crimes - Kanye West">
